 /* $Id: ChangeLog,v 1.875 2000-04-08 09:17:15 sandervl Exp $ */

 2000-04-08: Sander van Leeuwen <sandervl@xs4all.nl>
        - WINMM: Restart, pause & underrun fixes

 2000-04-07: Michal Necasek <mike@mendelu.cz>
        - DDRAW\NEW: Experimental fullscreen DDraw, VIDEOPMI based.
             May not work with all video cards and may cause all
             kinds of trouble. But works swell for eg. Fallout 1/2
             or HMM3. Contains some extra bugs compared to the
             windowed DDraw, ie. Moorhuhn and others don't work
             with it at all. Please tell me about your experience
             with this shameless hack.

 2000-04-07: Sander van Leeuwen <sandervl@xs4all.nl>
        - WINMM:  Don't restart when already playing
        - USER32: Print mark in debug log with WriteLog (#ifdef DEBUG), not dprintf
                  Workaround for paint problems in RealPlayer 7 Update 1.
                  (don't clip the dc with a region in DoNCPaint if the clip
                   region has the same size as the window; doing so creates
                   update problems for no obvious reason)
        - GDI32:  Only change bitmap size in SetDIBitsToDevice if bitmap
                  is not compressed. (fixes crash during startup in Excel)
                  NOTE: Open32 doesn't implement compression type conversion
                        correctly. (black splash screen for RLE8 bitmap)
	- KERNEL32: Return length of windows or system directory when
                    GetWindowsDirectory/GetSystemDirectory is called with
                    a NULL pointer

 2000-04-07: David Raison <djr@lemur.co.uk>
        - USER32: Set lfSmCaptionFont structure in NONCLIENTMETRICSA
                  (SystemParametersInfoA/SPI_GETNONCLIENTMETRICS)

 2000-04-07: Knut St. Osmundsen <knut.stange.osmundsen@pmsc.no>
        - TOOLS\DBGINFO: Sym2Hll is now able to convert .SYM files into HLL
                debuginfo and add it to LX executables. This might be